# singboard_for_mac

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build-macos.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/helper/src/: main.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: binary.rs  config.rs  mod.rs  network.rs  service.rs  srs.rs
src-tauri/src/service/: mod.rs  scm.rs  wrapper.rs
src/api/: geoip.ts  index.ts  latency.ts  websocket.ts
src/assets/styles/: main.css
src/bridge/: config.ts  service.ts
src/components/common/: ConfirmDialog.vue  SetupWizard.vue  ToastHost.vue
src/components/config/: ConfigProfileCard.vue
src/components/layout/: Sidebar.vue  Titlebar.vue
src/components/overview/: NetworkInfo.vue  SparkLine.vue  TopologyChart.vue
src/components/settings/: ConfigEditor.vue
src/composables/: useConfigAutoUpdate.ts
src/router/: index.ts
src/stores/: appVisible.ts  config.ts  connections.ts  logs.ts  overview.ts  proxies.ts  rules.ts  service.ts  toast.ts
src/types/: index.ts
src/utils/: batchUpdate.ts  format.ts  jsonc.ts  requestError.ts
src/views/: ConfigPage.vue  ConnectionsPage.vue  LogsPage.vue  OverviewPage.vue  ProxiesPage.vue  RulesPage.vue  SettingsPage.vue
