[package]
name = "singboard"
version = "2.3.3"
edition = "2024"

[lib]
name = "singboard_lib"
crate-type = ["lib"]

[[bin]]
name = "singboard"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2.2.0"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
lazy_static = "1.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "rt-multi-thread", "time", "sync"] }
windows-service = "0.7"
windows-sys = { version = "0.59", features = [
  "Win32_Security",
  "Win32_System_Services",
  "Win32_System_Threading",
  "Win32_Foundation",
  "Win32_System_JobObjects",
] }
winreg = "0.55"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "socks"] }
flate2 = "1"
tauri-plugin-dialog = "2.7.0"
sha2 = "0.10"
sysproxy = "0.3"

[profile.release]
strip = true
lto = true
opt-level = "s"
panic = "abort"
