[package]
name = "singboard"
version = "2.3.3"
edition = "2024"

[lib]
name = "singboard_lib"
crate-type = ["lib"]

[[bin]]
name = "singboard"
path = "src/main.rs"

[[bin]]
name = "singboard-helper"
path = "helper/src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "~2.2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
lazy_static = "1.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "rt-multi-thread", "time", "sync"] }
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "socks"] }
flate2 = "1"
tauri-plugin-dialog = "2"
sha2 = "0.10"
libc = "0.2"
ctrlc = { version = "3", features = ["termination"] }

[profile.release]
strip = true
lto = true
opt-level = "s"
panic = "abort"
